<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tcenso21.ui.home.HomeFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.tcenso21.ui.dashboard.DashboardFragment"
        android:label="@string/busqueda"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.tcenso21.ui.notifications.NotificationsFragment"
        android:label="@string/reportes"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/agregar"
        android:name="com.example.tcenso21.ui.ingreso.ingresoCiudadano"
        android:label="@string/agregar"
        tools:layout="@layout/ingreso_ciudadano_fragment" />

    <fragment
        android:id="@+id/editar"
        android:name="com.example.tcenso21.ui.editar.EditarCiudadano"
        android:label="@string/editar"
        tools:layout="@layout/editar_ciudadano_fragment" />
</navigation>